Adds functional tests for get leases. Updates lambda to implement new get leases method.
